--- a/.github/workflows/githubaction-comment-apply.yml
+++ b/.github/workflows/githubaction-comment-apply.yml
@@ -176,18 +176,18 @@ jobs:
         find .terraform/modules -mindepth 2 -maxdepth 2 -type d -name 'lambda' | while read lambda_dir; do
           module_dir=$(dirname "$lambda_dir")
           zip_name="$module_dir/lambda.zip"
-          temp_zip_name="$(basename "$module_dir").zip"
+          temp_zip_name="../../$(basename "$module_dir").zip"
 
           echo "Processing directory $lambda_dir"
           echo "Target zip file: $zip_name"
 
-          # Create a temporary zip file in the parent directory of the module
+          # Create a temporary zip file in the dev directory
           cd "$lambda_dir"
-          zip -r "../../$temp_zip_name" ./*
+          zip -r "$temp_zip_name" ./*
           cd - > /dev/null
 
           # Move the temporary zip file to the desired location
-          mv "../../$temp_zip_name" "$zip_name"
+          mv "$temp_zip_name" "$zip_name"
 
           echo "Zipped contents of $lambda_dir to $zip_name"
         done
