--- a/.github/workflows/githubaction-comment-apply-token.yml
+++ b/.github/workflows/githubaction-comment-apply-token.yml
@@ -201,10 +201,10 @@ jobs:
       env:
         TERRAFORM_HTTP_CREDENTIALS: |
           github.com/arvatoaws=oauth:${{ steps.generate-token.outputs.token }}
-        GITHUB_TOKEN: ${{ steps.generate-token.outputs.token }}
-        TERRAFORM_ACTIONS_GITHUB_TOKEN: ${{ steps.generate-token.outputs.token }}
-        GITHUB_APP_ID: ${{ secrets.TERRAFORM_GITHUB_ACTION_APP_ID }}
-        GITHUB_APP_PEM_FILE: ${{ secrets.TERRAFORM_GITHUB_ACTION_PRIVATE_KEY }}
+        # GITHUB_TOKEN: ${{ steps.generate-token.outputs.token }}
+        # TERRAFORM_ACTIONS_GITHUB_TOKEN: ${{ steps.generate-token.outputs.token }}
+        # GITHUB_APP_ID: ${{ secrets.TERRAFORM_GITHUB_ACTION_APP_ID }}
+        # GITHUB_APP_PEM_FILE: ${{ secrets.TERRAFORM_GITHUB_ACTION_PRIVATE_KEY }}
 
     # Download the plan from S3
     - name: Download Plan from S3
@@ -217,6 +217,8 @@ jobs:
       uses: opentofu/setup-opentofu@v1
     # Initialize Terraform
     - name: Tofu Init
+      env:
+        GITHUB_TOKEN: ${{ steps.generate-token.outputs.token }}
       run: |
         cd ${{ inputs.stack }}
         rm -rf .terraform .terraform.lock.hcl
@@ -266,6 +268,8 @@ jobs:
     - name: Tofu Apply
       id: apply
       continue-on-error: true
+      env:
+        GITHUB_TOKEN: ${{ steps.generate-token.outputs.token }}
       run: |
         cd ${{ inputs.stack }}
         tofu apply -input=false -no-color tfplan
