--- a/.github/workflows/githubaction-comment-apply-token.yml
+++ b/.github/workflows/githubaction-comment-apply-token.yml
@@ -108,12 +108,12 @@ jobs:
         role-session-name: GitHubTerraformDeployment
 
     # Get the github token with access to the relevant repositories from the app
-    #- name: Generate token
-    #  id: generate-token
-    #  uses: tibdex/github-app-token@v2
-    #  with:
-    #    app_id: ${{ secrets.TERRAFORM_GITHUB_ACTION_APP_ID }}
-    #    private_key: ${{ secrets.TERRAFORM_GITHUB_ACTION_PRIVATE_KEY }}
+    - name: Generate token
+      id: generate-token
+      uses: tibdex/github-app-token@v2
+      with:
+        app_id: ${{ secrets.TERRAFORM_GITHUB_ACTION_APP_ID }}
+        private_key: ${{ secrets.TERRAFORM_GITHUB_ACTION_PRIVATE_KEY }}
 
 
     - name: Generate GitHub App Token with Python for Arvatoaws
@@ -201,10 +201,10 @@ jobs:
       env:
         TERRAFORM_HTTP_CREDENTIALS: |
           github.com/arvatoaws=oauth:${{ steps.generate-token.outputs.token }}
-        # GITHUB_TOKEN: ${{ steps.generate-token.outputs.token }}
-        # TERRAFORM_ACTIONS_GITHUB_TOKEN: ${{ steps.generate-token.outputs.token }}
-        # GITHUB_APP_ID: ${{ secrets.TERRAFORM_GITHUB_ACTION_APP_ID }}
-        # GITHUB_APP_PEM_FILE: ${{ secrets.TERRAFORM_GITHUB_ACTION_PRIVATE_KEY }}
+        GITHUB_TOKEN: ${{ steps.generate-token.outputs.token }}
+        TERRAFORM_ACTIONS_GITHUB_TOKEN: ${{ steps.generate-token.outputs.token }}
+        GITHUB_APP_ID: ${{ secrets.TERRAFORM_GITHUB_ACTION_APP_ID }}
+        GITHUB_APP_PEM_FILE: ${{ secrets.TERRAFORM_GITHUB_ACTION_PRIVATE_KEY }}
 
     # Download the plan from S3
     - name: Download Plan from S3
