--- a/.github/workflows/githubaction-comment-apply-token.yml
+++ b/.github/workflows/githubaction-comment-apply-token.yml
@@ -187,6 +187,7 @@ jobs:
       with:
         path: ${{ inputs.stack }}
       env:
+        OPENTOFU_VERSION: 1.9.0
         TERRAFORM_HTTP_CREDENTIALS: |
           github.com/arvatoaws=oauth:${{ steps.generate-token.outputs.token }}
         GITHUB_TOKEN: ${{ steps.generate-token.outputs.token }}
@@ -199,6 +200,7 @@ jobs:
       with:
         path: ${{ inputs.stack }}
       env:
+        OPENTOFU_VERSION: 1.9.0
         TERRAFORM_HTTP_CREDENTIALS: |
           github.com/arvatoaws=oauth:${{ steps.generate-token.outputs.token }}
         GITHUB_TOKEN: ${{ steps.generate-token.outputs.token }}
