adjusted for ssh keys generation

--- a/.github/workflows/githubaction-comment-apply.yml
+++ b/.github/workflows/githubaction-comment-apply.yml
@@ -134,6 +134,7 @@ jobs:
       with:
         path: ${{ inputs.stack }}
       env:
+        OPENTOFU_VERSION: 1.9.0
         TERRAFORM_HTTP_CREDENTIALS: |
           github.com/arvatoaws=oauth:${{ steps.generate-token.outputs.token }}
         GITHUB_TOKEN: ${{ steps.generate-token.outputs.token }}
@@ -146,6 +147,7 @@ jobs:
       with:
         path: ${{ inputs.stack }}
       env:
+        OPENTOFU_VERSION: 1.9.0
         TERRAFORM_HTTP_CREDENTIALS: |
           github.com/arvatoaws=oauth:${{ steps.generate-token.outputs.token }}
         GITHUB_TOKEN: ${{ steps.generate-token.outputs.token }}
@@ -213,6 +215,8 @@ jobs:
     - name: Tofu Apply
       id: apply
       continue-on-error: true
+      env:
+        GITHUB_TOKEN: ${{ steps.generate-token.outputs.token }}
       run: |
         cd ${{ inputs.stack }}
         tofu apply -input=false -no-color tfplan
