adjust github action to get a detailed exit code from tofu plan

--- a/.github/workflows/githubaction-comment-plan.yml
+++ b/.github/workflows/githubaction-comment-plan.yml
@@ -125,7 +125,7 @@ jobs:
       run: |
         cd ${{ inputs.stack }}
         # Bash script to build tofu plan command dynamically
-        COMMAND="tofu plan -input=false -no-color -out=tfplan"
+        COMMAND="tofu plan -input=false -no-color -out=tfplan -detailed-exitcode"
         SECRETS_JSON='${{ toJson(secrets) }}'
         SECRETS=$(echo "$SECRETS_JSON" | jq -r 'keys[]')
         # Loop over each secret in the GitHub Actions environment
@@ -138,7 +138,9 @@ jobs:
           fi
         done
         # Execute the dynamically generated tofu command
-        eval $COMMAND && tofu show -no-color tfplan | sed 's/\x27/ /g' | sed -E 's/^([[:space:]]+)([-+])/\2\1/g' > plan.txt
+        eval $COMMAND
+        echo "exitcode=$?" >> $GITHUB_OUTPUT
+        tofu show -no-color tfplan | sed 's/\x27/ /g' | sed -E 's/^([[:space:]]+)([-+])/\2\1/g' > plan.txt
 
     # Upload the plan to S3
     - name: Upload ${{ inputs.stack }} Plan to S3
@@ -159,6 +161,13 @@ jobs:
         jq -R -s '.' < comment.txt > comment2.txt
         truncate -s -1 comment2.txt
         (echo -n '{ "body": ' && cat comment2.txt && echo -n ' }') > comment3.txt
+        labels=("planned")
+        echo "Detailed exit code: ${{steps.tfplan.outputs.exitcode}}"
+        if [ ${{steps.tfplan.outputs.exitcode}} eq 0 ]; then
+          labels+=("no changes")
+        fi
+        labels_final="$(jq --compact-output --null-input '$ARGS.positional' --args -- "${labels[@]}")"
+        echo "Final labels: ${labels_final}"
         curl \
           -X POST \
           $COMMENT \
@@ -170,7 +179,7 @@ jobs:
           https://api.github.com/repos/${{ github.repository }}/issues/${{ inputs.github_event_number }}/labels \
           -H "Content-Type: application/json" \
           -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
-          -d '["planned"]'
+          -d '{"labels": $labels_final}'
 
   logging:
     name: 'Save logs'
