adjust script for detecting changes

--- a/.github/workflows/githubaction-comment-plan.yml
+++ b/.github/workflows/githubaction-comment-plan.yml
@@ -122,7 +122,6 @@ jobs:
       continue-on-error: true
       env:
         GITHUB_TOKEN: ${{ steps.generate-token.outputs.token }}
-        TF_CLI_ARGS_plan: "-detailed-exitcode"
       run: |
         cd ${{ inputs.stack }}
         # Bash script to build tofu plan command dynamically
@@ -139,10 +138,20 @@ jobs:
           fi
         done
         # Execute the dynamically generated tofu command
-        eval $COMMAND
-        echo "detailed_exitcode=$?" >> $GITHUB_OUTPUT
-        tofu show -no-color tfplan | sed 's/\x27/ /g' | sed -E 's/^([[:space:]]+)([-+])/\2\1/g' > plan.txt
+        eval $COMMAND && tofu show -no-color tfplan | sed 's/\x27/ /g' | sed -E 's/^([[:space:]]+)([-+])/\2\1/g' > plan.txt
 
+    - name: Evaluate Changes
+      id: get-changes
+      run: |
+        tofu show -no-color -json tfplan | jq '
+          [ .resource_changes[]
+            | select(
+                (.change.actions | index("create")) or
+                (.change.actions | index("update")) or
+                (.change.actions | index("delete"))
+              )
+          ] | length'
+        echo "detailed_exitcode=$?" >> $GITHUB_OUTPUT
     # Upload the plan to S3
     - name: Upload ${{ inputs.stack }} Plan to S3
       run: |
@@ -163,8 +172,8 @@ jobs:
         truncate -s -1 comment2.txt
         (echo -n '{ "body": ' && cat comment2.txt && echo -n ' }') > comment3.txt
         labels=("planned")
-        echo "Detailed exit code: ${{steps.tfplan.outputs.detailed_exitcode}}"
-        if [ ${{steps.tfplan.outputs.detailed_exitcode}} -eq 0 ]; then
+        echo "Detailed exit code: ${{steps.get-changes.outputs.detailed_exitcode}}"
+        if [ ${{steps.get-changes.outputs.detailed_exitcode}} -eq 0 ]; then
           labels+=("no changes")
         fi
         labels_final="$(jq --compact-output --null-input '$ARGS.positional' --args -- "${labels[@]}")"
@@ -180,7 +189,7 @@ jobs:
           https://api.github.com/repos/${{ github.repository }}/issues/${{ inputs.github_event_number }}/labels \
           -H "Content-Type: application/json" \
           -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
-          -d '{"labels": "$labels_final"}'
+          -d "{\"labels\": $labels_final}"
 
   logging:
     name: 'Save logs'
