adjust output of changes

--- a/.github/workflows/githubaction-comment-plan.yml
+++ b/.github/workflows/githubaction-comment-plan.yml
@@ -139,15 +139,15 @@ jobs:
         done
         # Execute the dynamically generated tofu command
         eval $COMMAND && tofu show -no-color tfplan | sed 's/\x27/ /g' | sed -E 's/^([[:space:]]+)([-+])/\2\1/g' > plan.txt
-        tofu show -no-color -json tfplan | jq '
+        number_of_changes=$(tofu show -no-color -json tfplan | jq '
           [ .resource_changes[]
             | select(
                 (.change.actions | index("create")) or
                 (.change.actions | index("update")) or
                 (.change.actions | index("delete"))
               )
-          ] | length'
-        echo "detailed_exitcode=$?" >> $GITHUB_OUTPUT
+          ] | length')
+        echo "changes=$number_of_changes" >> $GITHUB_OUTPUT
 
     # - name: Evaluate Changes
     #   id: get-changes
@@ -181,8 +181,8 @@ jobs:
         truncate -s -1 comment2.txt
         (echo -n '{ "body": ' && cat comment2.txt && echo -n ' }') > comment3.txt
         labels=("planned")
-        echo "Detailed exit code: ${{steps.tfplan.outputs.detailed_exitcode}}"
-        if [ ${{steps.tfplan.outputs.detailed_exitcode}} -eq 0 ]; then
+        echo "Number of changes: ${{steps.tfplan.outputs.changes}}"
+        if [ ${{steps.tfplan.outputs.changes}} -eq 0 ]; then
           labels+=("no changes")
         fi
         labels_final="$(jq --compact-output --null-input '$ARGS.positional' --args -- "${labels[@]}")"
