--- a/.github/workflows/githubaction-comment-apply.yml
+++ b/.github/workflows/githubaction-comment-apply.yml
@@ -110,10 +110,10 @@ jobs:
     # Get the github token with access to the relevant repositories from the app
     - name: Generate token
       id: generate-token
-      uses: tibdex/github-app-token@v2
+      uses: actions/create-github-app-token@v2
       with:
-        app_id: ${{ secrets.TERRAFORM_GITHUB_ACTION_APP_ID }}
-        private_key: ${{ secrets.TERRAFORM_GITHUB_ACTION_PRIVATE_KEY }}
+        app-id: ${{ secrets.TERRAFORM_GITHUB_ACTION_APP_ID }}
+        private-key: ${{ secrets.TERRAFORM_GITHUB_ACTION_PRIVATE_KEY }}
 
     # Configure github access
     - uses: de-vri-es/setup-git-credentials@v2
