--- a/.github/workflows/githubaction-comment-apply.yml
+++ b/.github/workflows/githubaction-comment-apply.yml
@@ -114,6 +114,7 @@ jobs:
       with:
         app-id: ${{ secrets.TERRAFORM_GITHUB_ACTION_APP_ID }}
         private-key: ${{ secrets.TERRAFORM_GITHUB_ACTION_PRIVATE_KEY }}
+        owner: arvatoaws
 
     # Configure github access
     - uses: de-vri-es/setup-git-credentials@v2
