--- a/.github/workflows/githubaction-comment-plan.yml
+++ b/.github/workflows/githubaction-comment-plan.yml
@@ -152,8 +152,24 @@ jobs:
         quiet: true
         soft_fail: true
         output_file_path: results.sarif
+        skip_check: 'CKV_AWS_18,CKV_AWS_19,CKV_AWS_20,CKV_AWS_21'
       env:
         GITHUB_TOKEN: ${{ steps.generate-token.outputs.token }}
+
+    # Check SARIF file size and compress if needed
+    - name: Check and compress SARIF file
+      run: |
+        if [ -f "results.sarif" ]; then
+          SIZE=$(stat -f%z "results.sarif" 2>/dev/null || stat -c%s "results.sarif" 2>/dev/null || echo 0)
+          echo "SARIF file size: $SIZE bytes"
+          
+          # If file is larger than 10MB, compress it or filter results
+          if [ $SIZE -gt 10485760 ]; then
+            echo "SARIF file too large, filtering to HIGH and CRITICAL findings only"
+            jq '[.runs[].results[] | select(.level == "error" or .ruleId | test("HIGH|CRITICAL"))]' results.sarif > filtered_results.sarif
+            mv filtered_results.sarif results.sarif
+          fi
+        fi
 
     - name: Upload SARIF file
       uses: github/codeql-action/upload-sarif@v3
@@ -166,6 +182,7 @@ jobs:
       if: success() || failure()
       with:
         sarif_file: results.sarif
+      continue-on-error: true
 
     - name: Run Trivy vulnerability scanner in IaC mode
       uses: aquasecurity/trivy-action@0.29.0
